<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#47a64a">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/product_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/siamese" />

                <Button
                    android:id="@+id/details_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="2.5"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    tools:text="@string/select_image_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:layout_weight="1.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginStart="14dp"
                        android:text="@string/product_name"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:maxLength="15"
                        android:backgroundTint="@color/text_color"
                        android:hint="@string/product_name_hint"
                        android:inputType="textCapWords"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color"
                        android:textStyle="italic" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/product_price"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingStart="14dp"
                            android:text="@string/dollar_sign_text"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/product_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:maxLength="8"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/product_price_hint"
                            android:inputType="numberDecimal"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/text_color"
                            android:textStyle="italic" />


                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/product_year_of_manufacture"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/product_year_manufacture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:maxLength="4"
                        android:backgroundTint="@color/text_color"
                        android:hint="@string/product_year_of_manufacture_hint"
                        android:inputType="number"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color"
                        android:textStyle="italic" />

                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/text_color" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="28dp"
                        android:layout_marginStart="28dp"
                        android:text="@string/product_quantity"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/product_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:backgroundTint="@color/text_color"
                        android:hint="@string/product_quantity_hint"
                        android:maxLength="4"
                        android:inputType="number"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="28dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/product_brand"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/product_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp"
                        android:maxLength="15"
                        android:backgroundTint="@color/text_color"
                        android:hint="@string/product_brand_hint"
                        android:inputType="textCapWords"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/text_color"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="28dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/product_weight"
                        android:textColor="@color/text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/product_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:layout_marginStart="24dp"
                            android:maxLength="8"
                            android:backgroundTint="@color/text_color"
                            android:hint="@string/product_weight_hint"
                            android:inputType="numberDecimal"
                            android:textColor="@color/text_color"
                            android:textColorHint="@color/text_color"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="4dp"
                            android:paddingStart="4dp"
                            android:text="@string/kilogram_text"
                            android:textColor="@color/text_color"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:text="@string/product_type"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/product_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:text="@string/product_stock_status"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/in_stock_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:text="@string/product_warranty"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/product_warranty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/text_color"
                    android:hint="@string/product_warranty_hint"
                    android:inputType="number"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_color"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/increase_decrease_order__buttons_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/section_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/quantity_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_button"
                    android:text="@string/q_minus"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color" />

                <Button
                    android:id="@+id/quantity_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/border_button"
                    android:text="@string/q_plus"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color" />

                <Button
                    android:id="@+id/order_supplier_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/border_button"
                    android:text="@string/order_from_supplier_button"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_save_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>